@@ -118,7 +118,9 @@ public class NSGAII extends EA
     /**
      * Auxiliary method for adjusting the population size. It also suitably alters the offspring size (should equal
      * population size). Use with caution. It should not be invoked when executing an initialization or a generation
-     * but between these steps.
+     * but between these steps. The method does not explicitly extend the population array in
+     * {@link population.SpecimensContainer#getPopulation()} nor truncate it. However, the default implementation of
+     * phases allows for automatically adapting to new population sizes during evolution.
      *
      * @param populationSize new population size (set to 1 if the input is lesser)
      */
