@@ -2,9 +2,7 @@ package emo.aposteriori.nsgaiii;
 
 import ea.EA;
 import emo.utils.decomposition.goal.IGoal;
-import emo.utils.decomposition.nsgaiii.IAssignmentResolveTie;
-import emo.utils.decomposition.nsgaiii.ISpecimenResolveTie;
-import emo.utils.decomposition.nsgaiii.NSGAIIIGoalsManager;
+import emo.utils.decomposition.nsgaiii.*;
 import os.ObjectiveSpaceManager;
 import phase.IConstruct;
 import phase.IEvaluate;
@@ -23,6 +21,11 @@ import selection.Random;
 public class NSGAIII extends EA
 {
     /**
+     * Reference to the goals manager.
+     */
+    private NSGAIIIGoalsManager _goalsManager;
+
+    /**
      * Parameterized constructor (private).
      *
      * @param p params container
@@ -30,6 +33,29 @@ public class NSGAIII extends EA
     private NSGAIII(EA.Params p)
     {
         super(p);
+    }
+
+    /**
+     * Creates the NSGA-III algorithm. The algorithm is coupled with a random selection.
+     *
+     * @param id                  algorithm id
+     * @param updateOSDynamically if true, the OS will be updated dynamically; false = it will be fixed
+     * @param useNadirIncumbent   if true, nadir incumbent will be used when updating OS
+     * @param R                   the RGN
+     * @param goals               optimization goals
+     * @param problem             problem bundle (provides criteria, normalizations (when fixed), specimen constructor, evaluator, and reproducer)
+     * @return NSGA-III algorithm
+     */
+    public static NSGAIII getNSGAIII(int id,
+                                     boolean updateOSDynamically,
+                                     boolean useNadirIncumbent,
+                                     IRandom R,
+                                     IGoal[] goals,
+                                     AbstractMOOProblemBundle problem)
+    {
+        ISelect select = new Random(2);
+        return getNSGAIII(id, updateOSDynamically, useNadirIncumbent, R, goals, problem, select,
+                problem._construct, problem._evaluate, problem._reproduce, new RandomAssignment(), new RandomSpecimen());
     }
 
     /**
@@ -132,6 +158,25 @@ public class NSGAIII extends EA
         pEA._offspringSize = goals.length;
         pEA._R = R;
         pEA._id = id;
-        return new NSGAIII(pEA);
+
+        NSGAIII nsgaiii = new NSGAIII(pEA);
+        nsgaiii._goalsManager = pB._goalsManager;
+        return nsgaiii;
+    }
+
+    /**
+     * Auxiliary method for adjusting the optimization goals (thus, population size and other relevant fields).
+     * Use with caution. It should not be invoked when executing an initialization or a generation but between
+     * these steps. The method does not explicitly extend the population array in
+     * {@link population.SpecimensContainer#getPopulation()} nor truncate it. However, the default implementation of
+     * phases allows for automatically adapting to new population sizes during evolution.
+     *
+     * @param goals new optimization goals (the method terminates if null or empty)
+     */
+    public void adjustOptimizationGoals(IGoal[] goals)
+    {
+        if ((goals == null) || (goals.length == 0)) return;
+
+
     }
 }
